--- a/public/main.html
+++ b/public/main.html
@@ -22,6 +22,7 @@
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.1/angular-ui-router.min.js">
 		</script>
+		<script src="http://d2v52k3cl9vedd.cloudfront.net/plangular/3.1.0/plangular.min.js"></script>
 		<script type="text/javascript" src="./scripts/app.js"></script>
 		<script type="text/javascript" src="./scripts/controllers/MainCtrl.js"></script>
 		<script type="text/javascript" src="./scripts/models/postFactory.js"></script>
