--- a/public/main.html
+++ b/public/main.html
@@ -2,7 +2,7 @@
 <html>
 	
 	<head>
-		<link href="https://fonts.googleapis.com/css?family=BioRhyme|Indie+Flower" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=BioRhyme|Indie+Flower|Montserrat" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Copse|Josefin+Sans:600,700" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Pacifico|Open+Sans:300|Crimson+Text:400,400italic" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="./stylesheets/main.css">
