--- a/public/main.html
+++ b/public/main.html
@@ -2,22 +2,15 @@
 <html>
 	
 	<head>
-		<link href="https://fonts.googleapis.com/css?family=BioRhyme|Indie+Flower|Montserrat" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Montserrat|Montserrat+Alternates" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Copse|Josefin+Sans:600,700" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Pacifico|Open+Sans:300|Crimson+Text:400,400italic" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="./stylesheets/main.css">
 	</head>
 	
 	<body ng-app="paranoidPossumApp">
-		<div class="page-container">
-			<div class="page-header">							
-				<div class="header">					
-					<h1>The Paranoid Possum</h1>
-				</div>								
-			</div>
-			
-			<ui-view></ui-view>
-			
+		<div class="page-container">			
+			<ui-view></ui-view>		
 		</div>
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.1/angular-ui-router.min.js">
