--- a/public/main.html
+++ b/public/main.html
@@ -18,6 +18,7 @@
 		<script src="http://d2v52k3cl9vedd.cloudfront.net/plangular/3.1.0/plangular.min.js"></script>
 		<script type="text/javascript" src="./scripts/app.js"></script>
 		<script type="text/javascript" src="./scripts/controllers/MainCtrl.js"></script>
+		<script type="text/javascript" src="./scripts/controllers/PostCtrl.js"></script>
 		<script type="text/javascript" src="./scripts/models/postFactory.js"></script>
 	</body>
 </html>
