--- a/public/main.html
+++ b/public/main.html
@@ -9,15 +9,8 @@
 	</head>
 	
 	<body ng-app="paranoidPossumApp">
-		<div class="page-container">
-			<div class="page-header">							
-				<div class="header">					
-					<h1>The Paranoid Possum</h1>
-				</div>								
-			</div>
-			
-			<ui-view></ui-view>
-			
+		<div class="page-container">			
+			<ui-view></ui-view>			
 		</div>
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.1/angular-ui-router.min.js">
@@ -25,6 +18,7 @@
 		<script src="http://d2v52k3cl9vedd.cloudfront.net/plangular/3.1.0/plangular.min.js"></script>
 		<script type="text/javascript" src="./scripts/app.js"></script>
 		<script type="text/javascript" src="./scripts/controllers/MainCtrl.js"></script>
+		<script type="text/javascript" src="./scripts/controllers/PostCtrl.js"></script>
 		<script type="text/javascript" src="./scripts/models/postFactory.js"></script>
 	</body>
 </html>
